build(vrt): restore JUnit4 engine and SDK 37 support for Roborazzi tests
`junit-vintage-engine` was dropped in 2ae4210c as an unused dependency,
but the `@RunWith(AndroidJUnit4::class)` screenshot tests need it to run
on the JUnit Platform. Since then `-PonlyScreenshotTest=true` discovered
zero tests in every module and the screenshot_test CI job passed without
comparing a single image. compileSdk 37 (#1079) then pushed the modules
past Robolectric 4.16.1's SDK ceiling.

- Add `junit-vintage-engine` 5.13.4 (matching the JUnit Platform 1.13.x
  pulled in by Kotest) as `testRuntimeOnly` in
  ScreenshotTestConventionPlugin, and re-list it in Renovate ignoreDeps
  so it is not bumped past the platform version
- Bump Robolectric to 4.17-beta-4, the first release supporting SDK 37
- Add espresso-core 3.7.0 to the VRT test classpath; compose-ui-test's
  transitive 3.5.1 still calls the removed
  `InputManager.getInstance()` reflectively on SDK 37
- Pass `--add-opens=java.base/jdk.internal.access=ALL-UNNAMED` to the
  test JVM, required by Robolectric's FileDescriptor interceptor on
  SDK 37
- Set `failOnNoDiscoveredTests` to true when `onlyScreenshotTest` is
  passed so a silently empty screenshot run fails the build

Co-Authored-By: Claude Code <noreply@anthropic.com>